--- a/src/static/style/sass/base.sass
+++ b/src/static/style/sass/base.sass
@@ -21,6 +21,7 @@ body
     min-height: 100%
 a
     text-decoration: none
+    color: #ffffff
 
 #paper 
     max-width: 960px
@@ -32,3 +33,15 @@ a
 #table_header
     span 
         color: $secondary
+
+#details_wrapper
+    width: 240px
+    margin: 0 auto
+    margin-top: 40px
+    padding: 20px
+
+#details_btns_wrapper
+    display: flex
+
+.details_btn_link 
+    flex: 1
